--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(tutorial_02)
 add_subdirectory(tutorial_03)
 add_subdirectory(tutorial_04)
 add_subdirectory(tutorial_05)
+add_subdirectory(tutorial_06)
