--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,3 +5,5 @@ add_subdirectory(tutorial_03)
 add_subdirectory(tutorial_04)
 add_subdirectory(tutorial_05)
 add_subdirectory(tutorial_06)
+add_subdirectory(tutorial_07)
+add_subdirectory(tutorial_08)
