--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,3 +7,6 @@ add_subdirectory(tutorial_05)
 add_subdirectory(tutorial_06)
 add_subdirectory(tutorial_07)
 add_subdirectory(tutorial_08)
+add_subdirectory(tutorial_09)
+add_subdirectory(tutorial_10)
+
