add tutorial 11 and and fixed a pipeline bug

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,4 +9,5 @@ add_subdirectory(tutorial_07)
 add_subdirectory(tutorial_08)
 add_subdirectory(tutorial_09)
 add_subdirectory(tutorial_10)
+add_subdirectory(tutorial_11)
 
