--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,4 +11,5 @@ add_subdirectory(tutorial_09)
 add_subdirectory(tutorial_10)
 add_subdirectory(tutorial_11)
 add_subdirectory(tutorial_12)
+add_subdirectory(tutorial_13)
 
