--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,4 +12,6 @@ add_subdirectory(tutorial_10)
 add_subdirectory(tutorial_11)
 add_subdirectory(tutorial_12)
 add_subdirectory(tutorial_13)
+add_subdirectory(tutorial_14)
+add_subdirectory(tutorial_15)
 
