--- a/src/tutorial_14/CMakeLists.txt
+++ b/src/tutorial_14/CMakeLists.txt
@@ -1,20 +1,19 @@
 
-project(cameraCoordinate)
+project(cameraControl_1)
 
-
-add_executable(cameraCoordinate 
-    ${PROJECT_SOURCE_DIR}/cameraCoordinate.cpp
+add_executable(cameraControl_1 
+    ${PROJECT_SOURCE_DIR}/cameraControl_1.cpp
     ${PROJECT_SOURCE_DIR}/../../Common/ogldev_util.cpp
     ${PROJECT_SOURCE_DIR}/../../Common/math_3d.cpp
     ${PROJECT_SOURCE_DIR}/../../Common/pipeline.cpp
     ${PROJECT_SOURCE_DIR}/../../Common/camera.cpp
-    ${PROJECT_SOURCE_DIR}/../../Common/ogldev_atb.cpp)
-
-
+    ${PROJECT_SOURCE_DIR}/../../Common/ogldev_atb.cpp
+    ${PROJECT_SOURCE_DIR}/../../Common/glut_backend.cpp)
+    
 target_link_libraries(
-    cameraCoordinate 
+    cameraControl_1 
     ${OPENGL_LIBRARY}
     -lglut
-    -lGLEW
+    -lGLEW 
     AntTweakBar
 )
