--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,4 +14,5 @@ add_subdirectory(tutorial_12)
 add_subdirectory(tutorial_13)
 add_subdirectory(tutorial_14)
 add_subdirectory(tutorial_15)
+add_subdirectory(tutorial_16)
 
