--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,4 +15,5 @@ add_subdirectory(tutorial_13)
 add_subdirectory(tutorial_14)
 add_subdirectory(tutorial_15)
 add_subdirectory(tutorial_16)
+add_subdirectory(tutorial_17)
 
