--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,7 +20,5 @@ add_subdirectory(tutorial_18)
 add_subdirectory(tutorial_19)
 add_subdirectory(tutorial_20)
 add_subdirectory(tutorial_21)
-
+add_subdirectory(tutorial_22)
 add_subdirectory(tutorial_23)
-
- 
