--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,3 +22,4 @@ add_subdirectory(tutorial_20)
 add_subdirectory(tutorial_21)
 add_subdirectory(tutorial_22)
 add_subdirectory(tutorial_23)
+add_subdirectory(tutorial_24)
