--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,3 +23,4 @@ add_subdirectory(tutorial_21)
 add_subdirectory(tutorial_22)
 add_subdirectory(tutorial_23)
 add_subdirectory(tutorial_24)
+add_subdirectory(tutorial_25)
